[tool.poetry]
name = "tap-persona"
version = "0.2.0"
description = "Singer tap for Persona, built with the Meltano Singer SDK."
authors = ["Blueprint Data"]
keywords = ["ELT", "singer.io", "persona"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
singer-sdk = "^0.48.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
responses = "^0.25.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
tap-persona = 'tap_persona.tap:TapPersona.cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
